<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_import_keys"
        android:title="@string/import_keys"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_root_import"
        android:title="@string/root_import"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fetch_covers"
        android:checkable="true"
        android:title="@string/menu_fetch_covers"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fetch_lyrics"
        android:checkable="true"
        android:title="@string/menu_fetch_lyrics"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
</menu>
